--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "ts-node src/index.ts"
-  },
+  "dev": "ts-node src/index.ts",
+  "build": "tsc",
+  "start": "node dist/index.js"
+},
+
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
