--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-  "dev": "ts-node src/index.ts",
+  "dev": "ts-node index.ts",
   "build": "tsc",
   "start": "node dist/index.js"
 },
+
 
   "dependencies": {
     "cors": "^2.8.5",
